<resources>
    <string name="app_name">USTHWeather</string>
    <string name="activity_title">Weather Forecast</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="Mon">Thứ 2</string>
    <string name="weather_image">Here is a weather icon.</string>
    <string name="Sat">Thứ 7</string>
    <string name="Fri">Thứ 6</string>
    <string name="Thu">Thứ 5</string>
    <string name="Wed">Thứ 4</string>
    <string name="Tue">Thứ 3</string>
    <string name="Sun">Chủ nhật</string>
    <string name="USTH_Weather">USTH Weather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Cloudy">Cloudy</string>
    <string name="Paris">Paris</string>
    <string name="temperature">12C</string>
    <string name="Scattered_Thunderstorms">Dông dải rác</string>
    <string name="last_day_temperature">23C -27C</string>
    <string name="cloudy_vn">Nhiều mây</string>
    <string name="first_monday_temper">24C - 31C</string>
    <string name="showers_vn">Mưa</string>
    <string name="first_tuesday_temper">24C - 31C</string>
    <string name="first_wed_temper">22C - 23C</string>
    <string name="rain_vn">Mưa</string>
    <string name="scattered_showers">Mưa rào rải rác</string>
    <string name="thursday_temper">21C - 27C</string>
    <string name="friday_temper">22C - 30C</string>
    <string name="saturday_temper">24C - 31C</string>
    <string name="sunny_vn">Nắng</string>
    <string name="sunday_temper">25C - 28C</string>
    <string name="thunderstorms_vn">Mưa rào</string>
    <string name="second_monday_temper">24C - 27C</string>
    <string name="second_tuesday_temper">24C - 26C</string>
</resources>