<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10sp"
    tools:context=".ForecastFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="446dp"
        android:background="#E6E6FA"
        android:orientation="vertical">
        <!-- TODO: Update blank fragment layout -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#E6E6FA"
            android:orientation="horizontal">

            <TextView
                android:layout_width="84sp"
                android:layout_height="match_parent"
                android:ellipsize="middle"
                android:text="@string/Mon"
                android:textAlignment="center"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="77sp"
                android:layout_height="match_parent"
                android:ellipsize="middle"
                android:padding="2sp"
                android:src="@drawable/partly_sunny_cloudy"
                android:textAlignment="center"
                android:contentDescription="@string/Cloudy"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#E6E6FA"
                android:orientation="vertical"
                android:layout_gravity="left">
                <TextView
                    android:layout_width="209sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/cloudy_vn"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="209sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/first_monday_temper"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#E6E6FA"
            android:orientation="horizontal"
            android:layout_gravity="left">

            <TextView
                android:layout_width="84sp"
                android:layout_height="match_parent"
                android:ellipsize="middle"
                android:text="@string/Tue"
                android:textAlignment="center"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="77sp"
                android:layout_height="match_parent"
                android:contentDescription="@string/weather_image"
                android:ellipsize="middle"
                android:padding="2sp"
                android:src="@drawable/rain"
                android:textAlignment="center" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#E6E6FA"
                android:orientation="vertical"
                android:layout_gravity="left">
                <TextView
                    android:layout_width="209sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/showers_vn"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="209sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/first_tuesday_temper"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#E6E6FA"
            android:orientation="horizontal">

            <TextView
                android:layout_width="84sp"
                android:layout_height="match_parent"
                android:ellipsize="middle"
                android:text="@string/Wed"
                android:textAlignment="center"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="77sp"
                android:layout_height="match_parent"
                android:contentDescription="@string/weather_image"
                android:ellipsize="middle"
                android:padding="2sp"
                android:src="@drawable/rain"
                android:textAlignment="center" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#E6E6FA"
                android:orientation="vertical"
                android:layout_gravity="left">
                <TextView
                    android:layout_width="209sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/rain_vn"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="209sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/first_wed_temper"
                    android:textSize="15sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#E6E6FA"
            android:orientation="horizontal">

            <TextView
                android:layout_width="84sp"
                android:layout_height="match_parent"
                android:ellipsize="middle"
                android:text="@string/Thu"
                android:textAlignment="center"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="77sp"
                android:layout_height="match_parent"
                android:contentDescription="@string/weather_image"
                android:ellipsize="middle"
                android:padding="2sp"
                android:src="@drawable/scatter_showers"
                android:textAlignment="center" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#E6E6FA"
                android:orientation="vertical"
                android:layout_gravity="left">
                <TextView
                    android:layout_width="209sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/scattered_showers"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="209sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/thursday_temper"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#E6E6FA"
            android:orientation="horizontal">

            <TextView
                android:layout_width="84sp"
                android:layout_height="match_parent"
                android:ellipsize="middle"
                android:text="@string/Fri"
                android:textAlignment="center"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="77sp"
                android:layout_height="match_parent"
                android:contentDescription="@string/weather_image"
                android:ellipsize="middle"
                android:padding="2sp"
                android:src="@drawable/partly_sunny_cloudy"
                android:textAlignment="center" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#E6E6FA"
                android:orientation="vertical"
                android:layout_gravity="left">
                <TextView
                    android:layout_width="209sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/cloudy_vn"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="209sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/friday_temper"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#E6E6FA"
            android:orientation="horizontal">

            <TextView
                android:layout_width="84sp"
                android:layout_height="match_parent"
                android:ellipsize="middle"
                android:text="@string/Sat"
                android:textAlignment="center"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="77sp"
                android:layout_height="match_parent"
                android:contentDescription="@string/weather_image"
                android:ellipsize="middle"
                android:padding="2sp"
                android:src="@drawable/partly_sunny_cloudy"
                android:textAlignment="center" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#E6E6FA"
                android:orientation="vertical"
                android:layout_gravity="left">

                <TextView
                    android:layout_width="209sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/sunny_vn"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="209sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/saturday_temper"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#E6E6FA"
            android:orientation="horizontal">

            <TextView
                android:layout_width="84sp"
                android:layout_height="match_parent"
                android:ellipsize="middle"
                android:text="@string/Sun"
                android:textAlignment="center"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="77sp"
                android:layout_height="match_parent"
                android:contentDescription="@string/weather_image"
                android:ellipsize="middle"
                android:padding="2sp"
                android:src="@drawable/thunderstorms_icon"
                android:textAlignment="center" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#E6E6FA"
                android:orientation="vertical"
                android:layout_gravity="left">
                <TextView
                    android:layout_width="209sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/thunderstorms_vn"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="209sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/sunday_temper"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#E6E6FA"
            android:orientation="horizontal">

            <TextView
                android:layout_width="84sp"
                android:layout_height="match_parent"
                android:ellipsize="middle"
                android:text="@string/Mon"
                android:textAlignment="center"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="77sp"
                android:layout_height="match_parent"
                android:contentDescription="@string/weather_image"
                android:ellipsize="middle"
                android:padding="2sp"
                android:src="@drawable/scatter_showers"
                android:textAlignment="center" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#E6E6FA"
                android:orientation="vertical"
                android:layout_gravity="left">
                <TextView
                    android:layout_width="209sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/Scattered_Thunderstorms"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="209sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/second_monday_temper"
                    android:textSize="15sp" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#E6E6FA"
            android:orientation="horizontal">

            <TextView
                android:layout_width="84sp"
                android:layout_height="match_parent"
                android:ellipsize="middle"
                android:text="@string/Tue"
                android:textAlignment="center"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="77sp"
                android:layout_height="match_parent"
                android:contentDescription="@string/weather_image"
                android:ellipsize="middle"
                android:padding="2sp"
                android:src="@drawable/rain"
                android:textAlignment="center" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#E6E6FA"
                android:orientation="vertical"
                android:layout_gravity="left">

                <TextView
                    android:layout_width="209sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/showers_vn"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="209sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/second_tuesday_temper"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#E6E6FA"
            android:orientation="horizontal">

            <TextView
                android:layout_width="84sp"
                android:layout_height="match_parent"
                android:ellipsize="middle"
                android:text="@string/Wed"
                android:textAlignment="center"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="77sp"
                android:layout_height="match_parent"
                android:contentDescription="@string/weather_image"
                android:ellipsize="middle"
                android:padding="2sp"
                android:src="@drawable/scatter_showers"
                android:textAlignment="center" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#E6E6FA"
                android:orientation="vertical"
                android:layout_gravity="left">

                <TextView
                    android:id="@+id/scattered_thunderstorms"
                    android:layout_width="209sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/Scattered_Thunderstorms"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="209sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/last_day_temperature"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>